--- a/.travis.yml
+++ b/.travis.yml
@@ -41,5 +41,5 @@ deploy:
 notifications:
   email: bullerk@gmail.com
   irc: ircs://chat.freenode.net:7070/##nebula
-  on_success: always
+  on_success: change
   on_failure: always
