--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,9 @@ script:
   - echo "$TRAVIS_BRANCH - $TRAVIS_COMMIT - $TRAVIS_TAG - $TRAVIS_PULL_REQUEST"
   - curl -s https://raw.githubusercontent.com/nebularg/curseforge-packager/master/release.sh | bash -s -- -d
 
-before_deploy: echo "Uploading $PACKAGER_ARCHIVE to GitHub release $TRAVIS_TAG"
+before_deploy:
+  - export PACKAGER_ARCHIVE=$(ls -1 .release/*.zip | grep -v nolib)
+  - echo "Uploading $PACKAGER_ARCHIVE to GitHub release $TRAVIS_TAG"
 deploy:
   provider: releases
   api_key:
