--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install: luarocks install --local luacheck
 
 before_script: /home/travis/.luarocks/bin/luacheck . --no-color -qo "011"
 script:
-  - echo "$TRAVIS_BRANCH - $TRAVIS_COMMIT - $TRAVIS_TAG - $TRAVIS_PULL_REQUEST"
+  - echo "$TRAVIS_BRANCH - $TRAVIS_COMMIT - $TRAVIS_TAG - $TRAVIS_PULL_REQUEST - $TRAVIS_BUILD_DIR"
   - curl -s https://raw.githubusercontent.com/nebularg/curseforge-packager/master/release.sh | bash -s -- -d
 
 before_deploy:
