--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,8 @@ env:
 
 before_install: luarocks install --local luacheck
 
-before_script: /home/travis/.luarocks/bin/luacheck . --no-color -qo "011"
+before_script: /home/travis/.luarocks/bin/luacheck . -qo "011"
+
 script:
   - echo "$TRAVIS_BRANCH - $TRAVIS_COMMIT - $TRAVIS_TAG - $TRAVIS_PULL_REQUEST - $TRAVIS_BUILD_DIR"
-  - curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash
-
-notifications:
-  email:
-    on_success: never
-    on_failure: always
+  - curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash -s -- -l
